docs: add quality analysis

--- a/Analytics/analytics.ipynb
+++ b/Analytics/analytics.ipynb
@@ -2562,8 +2562,29 @@
    "metadata": {},
    "source": [
     "## Análise de qualidade\n",
-    "\n"
+    "\n",
+    "A partir do gráfico final de qualidade é possível perceber que o nível de qualidade dos repositórios até o momento parece seguir com o mesmo nível de qualidade já estabelecido do semestre anterior. Isso demonstra que os limites mínimos exigidos de qualidade pela pipeline está funcionando em ajudar a manter um certo nível de qualidade.\n",
+    "\n",
+    "### Front\n",
+    "O front atualmente é o único repositório que está com a cobertura de testes abaixo de 80%. Atualmente é 58.3%, apesar de que é possível ver uma melhoria na cobertura, ainda existe a necessidade de priorizar essa cobertura de testes.\n",
+    "\n",
+    "Fora isso, atualmente o sonarcloud reporta a existencia de 25 bugs que foram introduzidos recentemente no repositorio. E que também devem ser priorizados.\n",
+    "\n",
+    "### Action\n",
+    "\n",
+    "A action começou com um nível de qualidade acima dos outros repositórios. Mas o time deve ficar atento para que a qualidade de código do produto não diminua com o tempo.\n",
+    "\n",
+    "### Service\n",
+    "\n",
+    "Possui 7,8% de código duplicado, enquanto todos os outros repositorios possui quase 0%.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
