docs: update notebook quality analysis

--- a/Analytics/analytics.ipynb
+++ b/Analytics/analytics.ipynb
@@ -36,9 +36,7 @@
     "- Member Luis Gustavo Ferreira Marques\n",
     "- Member Marcos Gabriel Tavares\n",
     "- Member Murilo Gomes de Souza\n",
-    "- Member Paulo Batista\n",
-    "- Member Philipe Rosa Serafim\n",
-    "- Member Washington Bispo Arishita Júnior \n"
+    "- Member Paulo Batista\n"
    ]
   },
   {
@@ -2576,15 +2574,10 @@
     "\n",
     "### Service\n",
     "\n",
-    "Possui 7,8% de código duplicado, enquanto todos os outros repositórios possuem quase 0%.\n"
+    "Possui 7,8% de código duplicado, enquanto todos os outros repositórios possuem quase 0%.\n",
+    "\n",
+    "##\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
